cmake_minimum_required(VERSION 3.26)
project(PHUCSNAP C)

set(CMAKE_C_STANDARD 11)

add_executable(PHUCSNAP main.c
        DEMO1/vd1.c
        DEMO1/vd1.c
        DEMO2/demo2.c
        DEMO2/demo2.c
        DEMO3/DEMO3.c
        QWER/QWER.c
        Bai`7/vd1/vd1.c
        Bai`7/vd2/vd2.c
        Bai`7/vd3/vd3.c
        Bai`7/vd4/vd4.c
        "VD bai`7/VD bai` 7.c"
        Bai`7/vd5/vd5.c
        Bai`7/vd6/vd7.c
        Bai`7/vd8/vd8.c
        Bai`7/vd9/vd9.c
        Bai`7/vd10/vd10.c
        "Bai` 8/vd1/vd1.c"
        "Bai` 8/vd2/vd2.c"
        "Bai` 8/vd3/vd3.c"
        "Bai` 8/vd4/vd4.c"
        "Bai` 8/vd5/vd5.c"
        "Bai` 8/vd6/vd6.c"
        "Bai` 8/vd7/vd7.c"
        "Bai` 8/BT tu lam`/BT1/BT1.c"
        "Bai Diem/bai diem.c"
)
